Fixed table layout, refactor field visibility (#935)
Column width is now fixed to 200px although will increase to fill table
if there are fewer columns than is enough to fill width. If there are
more columns than fit then the table will expand horizontally.
Refactored field visbility to use a reducer hook.

--- a/src/shared/styles/search-tables.less
+++ b/src/shared/styles/search-tables.less
@@ -68,7 +68,7 @@ html {
         thead.ant-table-thead > tr > th {
           font-weight: 400;
           background: @thead-bg;
-          min-width: max-content;
+          width: 200px;
           padding: 10px 15px;
           .thead-borders();
 
@@ -113,8 +113,7 @@ html {
             background: @thead-bg !important;
           }
           padding: 7px 15px;
-          min-width: auto;
-          max-width: 250px;
+          width: 200px;
           pre {
             margin: unset;
           }
